# Porto

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  entity-schema.json  package.json  porto.pro  soft.pro
core/src/kernel/: CMakeLists.txt  Soft  collection.cpp  collection.h  config.h.in  idatamodel.cpp  idatamodel.h  ientity.cpp  ientity.h  istoragestrategy.cpp  istoragestrategy.h  istrategyplugin.h  pluginloader.cpp  pluginloader.h  scriptengine.cpp  scriptengine.h  soft.cpp  soft.h  softtypes.h  storage.cpp  storage.h  storagefactory.cpp  storagefactory.h  transactor.cpp  transactor.h  tripletstore.cpp  tripletstore.h  variant.h
core/test/kernel/: CMakeLists.txt  basetest.cpp  collectiontest.cpp  datamodeltest.cpp  main.cpp  storagestrategytest.cpp  storagestrategytest.h  storagetest.cpp  testentity.cpp  testentity.h  tripletstest.cpp  varianttest.cpp
core/test/kernel/entities/: CMakeLists.txt  collection_test_entity.json
doc/: CMakeLists.txt  Doxyfile.in  formatSwigPythonModule.py  tutorial.org
doc/dataObjects/: entity-schema.js  general_Units.md
doc/html/: header.html  images.css
doc/manual/: 01_preface.md  02_soft_introduction.md  03_porto_overview.md  04_usecase1.md  05_usecase2.md  06_usecase3.md  genmanual.sh
doc/specification/entities/: C3PO_bin_temperatureParticleBin.json  C3PO_sample_SherwoodParticleAverage.json  C3PO_sample_SherwoodParticleSurface.json  C3PO_sample_force.csv  C3PO_sample_force.json  C3PO_sample_temperatureFluid.csv  C3PO_sample_temperatureFluid.json  C3PO_sample_temperatureParticleAverage.csv  C3PO_sample_temperatureParticleSurface.csv  C3PO_sample_temperatureParticleSurface.json  C3PO_sample_velocity.csv  C3PO_sample_velocity.json  C3PO_sample_voidage.csv  LIGGGHTS_dump.csv  LIGGGHTS_dump.json  OF_flow_U.csv  OF_flow_U.json  OF_flow_p.csv  OF_flow_p.json  OF_flow_rho.csv  OF_flow_voidfraction.csv  OF_particle_position.csv  OF_particle_position.json  OF_particle_r.csv  OF_particle_r.json  OF_particle_v.csv  PASCAL_averageParticleData_T.csv  PASCAL_fluxParticle_T.csv  PASCAL_fluxParticle_T.json  PASCAL_intraParticleData_T.csv  PASCAL_positionParticle.csv  PASCAL_radiusParticle.csv  PASCAL_radiusParticle.json  PORTO_correlation_dragCoefficient.csv  PORTO_correlation_dragCoefficient.json
doc/specification/entities/csv/: C3PO_sample_force.csv  C3PO_sample_temperatureParticleAverage.csv  C3PO_sample_temperatureParticleSurface.csv  LIGGGHTS_dump.csv  OF_flow_U.csv  OF_flow_p.csv  OF_flow_voidfraction.csv  OF_particle_r.csv  PASCAL_positionParticle.csv  PORTO_correlation_dragCoefficient.csv
doc/specification/schemata/: entity-schema-compact.json
doc/specification/templates/: template_dragForceModel_OpenFOAM.C
doc/specification/uml/: usecase_WP4_1_forceModel.md
doc/specification/umlExternalCode/PaScalAndCOSI/: usecase_COSI_CFD2_2_4_fixedBedModeling.md
doc/templates/: testplan.css
foreign/c/example/autogen/: CMakeLists.txt
foreign/c/example/storageplugin/: CMakeLists.txt  samplestorage.c
foreign/c/src/softc/: CMakeLists.txt  softc-allocatable.c  softc-allocatable.h  softc-block-private.h  softc-block.c  softc-block.h  softc-bytearray-private.hpp  softc-bytearray.cpp  softc-bytearray.h  softc-collection-private.cpp  softc-collection-private.h  softc-collection.c  softc-collection.h  softc-datamodel-private.h  softc-datamodel-private.hpp  softc-datamodel.cpp  softc-datamodel.h  softc-entity.c  softc-entity.h  softc-eventloop-private.cpp  softc-eventloop-private.h  softc-eventloop.c  softc-eventloop.h  softc-macros.h  softc-private.cpp  softc-private.h  softc-slotsignal.h  softc-storage-plugin.h  softc-storage-private.cpp  softc-storage-private.h  softc-storage-strategy-private.cpp  softc-storage-strategy-private.h  softc-storage-strategy-private.hpp  softc-storage-strategy.c  softc-storage-strategy.h  softc-storage.c  softc-storage.h  (+11 more)
numerics/src/sim/: CMakeLists.txt  config.h.in  sim-handle.c  sim-handle.h  sim-macros.h  sim-private.h  sim.cpp  sim.h
porto/src/dft-prepare/: CMakeLists.txt  main.cpp
porto/src/entities/: CMakeLists.txt  chemkinreaction.json  collection-rc4.json.future  effectivenessfactor.json  effectivereactionparameters.json  file.json  reference.json  remarcsetup.json  xy.json
porto/src/json/: CMakeLists.txt  json.cpp  json.h
porto/src/remarc-wrapper/: CMakeLists.txt  common.h  main.cpp  portoinput.cpp  portooutput.h  remarc.cpp  remarc.h
porto/src/xyplot/: CMakeLists.txt  xyplot.cpp  xyplot.h
porto/test/chemkin/: CMakeLists.txt  main.cpp  test-chemkin.cpp
porto/test/codegen/: CMakeLists.txt  codegen-test.cpp
porto/test/json/: CMakeLists.txt  test-json.cpp
porto/test/parscale/: CMakeLists.txt  test-parscale-input.cpp
storage/src/hdf5/: CMakeLists.txt  h5ns.h  qh5.cpp  qh5.h  qh5attribute.h  qh5dataset.h  qh5dataspace.cpp  qh5datatype.cpp  qh5datatype.h  qh5file.cpp  qh5file.h  qh5property.cpp  qh5property.h
storage/src/mongo/: CMakeLists.txt  qbson.cpp  qbson.h  qmongoc.h  qmongocollection.cpp  qmongocollection.h  qmongocursor.h  qmongodatabase.h  qmongogridfsfilelist.h  qmongogridfsfileopt.cpp  qmongogridfsfileopt.h  qmongouri.cpp
storage/test/mongo/: CMakeLists.txt  main.cpp  mongotest.cpp  qbsontest.cpp
tools/: CMakeLists.txt
tools/doc/: tools.md
tools/doc/plugins/: tools-plugins.md
tools/examples/network-access-manager/: main.js
tools/src/forge/: CMakeLists.txt  soft-forge  soft-register-entity  soft-search-entity
tools/src/softshell/: CMakeLists.txt  base64.cpp  concurrent.h  console.cpp  eventloopprototype.cpp  filesystem.cpp  filesystemwatcher.cpp  filesystemwatcherprototype.h  hostinfo.cpp  main.cpp  networkaccessmanager.cpp  networkaccessmanager.h  networkaccessmanagerprototype.cpp  networkaccessmanagerprototype.h  networkreply.cpp  networkreply.h  networkreplyprototype.cpp  networkreplyprototype.h  procsprototype.cpp  procsprototype.h  protocall.h  scriptplugins.cpp  softshell.cpp  softshell.h  softshell.qrc  state.cpp  state.h  stateprototype.cpp  stateprototype.h  utils.cpp
tools/src/web/: CMakeLists.txt  httpdaemon.cpp  httpdaemon.h  main.cpp  webserver.qrc
(+1005 files in other folders)
